<resources>
    <string name="app_name">Justa Mobile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Coleta Seletiva</string>
    <string name="menu_news">Notícias</string>
    <string name="menu_collection_day">Dias de Coleta</string>
    <string name="menu_recycling_companies">Empresas de Reciclagem</string>
    <string name="menu_forecast">Tempo Agora</string>
    <string name="menu_share">Compartilhe</string>
    <string name="menu_send">Contato</string>
    <string name="title_activity_recycling_map">Map</string>
    <string name="address">Endereço</string>
    <string name="phone">Telefone</string>
    <string name="materials">Materiais</string>
    <string name="social">Social</string>
    <string name="facebook">facebook.com/@coopecamarest</string>
    <string name="materials_test">Embalagem longa vida, Metais, Papel branco, Plástico, Vidro</string>
    <string name="phone_test">(87)99614-3139</string>
    <string name="email_test">marcosouza@gmail.com</string>
    <string name="name_company">Nome Empresa</string>
    <string name="city">Serra Talhada - PE</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="humidity">Umidade</string>
    <string name="sunrise">Nascer do Sol</string>
    <string name="sunset">Pôr do Sol</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="action_sign_up">Sair</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
</resources>
