<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/recycle_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/newspaper"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/calendar_repeat"
            android:title="@string/menu_collection_day" />
        <item
            android:id="@+id/nav_recycling_companies"
            android:icon="@drawable/domain"
            android:title="@string/menu_recycling_companies" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/weather_partly_cloudy"
            android:title="@string/menu_forecast" />
    </group>


</menu>
