<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.com.marcosouza.justamobile.ui.activity.RecyclingMapActivity"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="br.com.marcosouza.justamobile.ui.fragments.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="br.com.marcosouza.justamobile.ui.fragments.CollectionDayFragment"
        android:label="@string/menu_collection_day"
        tools:layout="@layout/fragment_collection_day" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="br.com.marcosouza.justamobile.ui.fragments.ForecastFragment"
        android:label="@string/menu_forecast"
        tools:layout="@layout/fragment_forecast" />

    <fragment
        android:id="@+id/nav_share"
        android:name="br.com.marcosouza.justamobile.ui.fragments.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="br.com.marcosouza.justamobile.ui.fragments.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>