<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    tools:context=".ui.activity.CompanyDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView_detail_thumb"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars[3]" />

        <TextView
            android:id="@+id/textView_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView_detail_thumb"
            android:text="@string/name_company"
            android:gravity="center"
            android:padding="20dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_below="@+id/textView_detail_name">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/colorViewDetailCompany"
                    android:textSize="14sp"
                    android:text="@string/address"/>

                <TextView
                    android:id="@+id/textView_detail_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#000"
                    android:text="@string/email_test"
                    android:textSize="18sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorViewDetailCompany"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorViewDetailCompany"
                    android:fontFamily="sans-serif-light"
                    android:textSize="14sp"
                    android:text="@string/phone"/>

                <TextView
                        android:paddingTop="6dp"
                        android:id="@+id/textView_detail_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:textColor="#000"
                        android:onClick="openDialer"
                        android:drawableLeft="@drawable/phone"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/colorPrimaryDark"
                        android:text="@string/phone_test"
                        android:textSize="18sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorViewDetailCompany"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/colorViewDetailCompany"
                    android:textSize="14sp"
                    android:text="@string/materials"/>

                <TextView
                    android:id="@+id/textView_detail_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#000"
                    android:text="@string/materials_test"
                    android:textSize="18sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorViewDetailCompany"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textSize="14sp"
                    android:textColor="@color/colorViewDetailCompany"
                    android:text="@string/social"/>

                <TextView
                    android:id="@+id/textView_detail_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#000"
                    android:text="@string/facebook"
                    android:textSize="18sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorViewDetailCompany"/>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</ScrollView>