<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">


    <RelativeLayout
        android:id="@+id/layout_info_weather"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/text_view_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="28sp"
            android:layout_marginTop="60dp"
            android:text="@string/city"
            android:textColor="#FFFFFF"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/image_view_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textStyle="bold"
            android:layout_marginTop="160dp"
            android:scaleType="fitXY"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            tools:srcCompat="@tools:sample/avatars[3]"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_view_icon"
            android:weightSum="3"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/text_view_temp_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="14%"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <TextView
                    android:id="@+id/text_view_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="25°"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:layout_gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/text_view_temp_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="17:45"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:layout_gravity="center" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/text_view_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="340dp"
            android:layout_centerHorizontal="true" />

        <View
            android:id="@+id/view1"
            android:layout_width="80dp"
            android:layout_height="1dp"
            android:layout_below="@+id/text_view_main"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:background="#FFFFFF" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_main"
            android:weightSum="3"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/text_view_humidty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="14%"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:layout_gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/text_view_sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5:15"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:layout_gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/text_view_sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="17:45"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:layout_gravity="center" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>